# proi-carrental

./: .gitignore  CMakeLists.txt  README.md  gui.cpp  main.cpp  main.pro  simulation.cpp  user_interface.cpp
data/: addresses.json  admins.json  customers.json  locations.json  vehicles.json
src/: customer.h  customer_managment.cpp  customer_managment.h  fleet_managment.cpp  fleet_managment.h  rental.h  rental_managment.cpp  rental_managment.h  vehicle.cpp  vehicle.h
src/address/: address.cpp  address.h
src/admin/: admin.cpp  admin.h
src/car/: car.h
src/customer/: customer.cpp  customer.h  customer_management.cpp  customer_management.h
src/fleet/: fleet_management.cpp  fleet_management.h
src/location/: location.cpp  location.h
src/rental/: rental.cpp  rental.h  rental_management.cpp  rental_management.h
src/simulation/: simulation.cpp  simulation.h  simulation_report.cpp  simulation_report.h  simulation_report_entity.cpp  simulation_report_entity.h
src/truck/: truck.h
src/user/: user.cpp  user.h
src/userInterface/: userInterface.cpp  userInterface.h
src/vehicle/: vehicle.cpp  vehicle.h
tests/: test_address.cpp  test_admin.cpp  test_customer.cpp  test_customer_management.cpp  test_fleet_management.cpp  test_location.cpp  test_rental.cpp  test_rental_management.cpp  test_vehicle.cpp
utils/: generate.h
